# BandGate

./: .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  agent_config.yaml.example  docker-compose.yml  render.yaml
backend/: Dockerfile  app.py  pyproject.toml  run_demo.py
backend/agents/: adversarial_reviewer.py  answer_pipeline.py  approval.py  intake.py  live_orchestrator.py  orchestrator.py  product_capability.py  sales_engineer.py  security_compliance.py
backend/core/: band_client.py  citation_gate.py  conflict.py  drift_control.py  injection.py  model_clients.py  paths.py  policy_loader.py  provider_config.py  rag.py  rfp_parser.py  schemas.py  state_store.py
backend/scripts/: final_demo_check.py  generate_submission_pack.py  probe_providers.py  run_band_collaboration.py  run_band_service.py  verify_band_agents.py
backend/tests/: test_adversarial_reviewer.py  test_agents.py  test_approval.py  test_band_client.py  test_band_collaboration.py  test_drift_control.py  test_final_demo_check.py  test_hardening.py  test_human_gate_route.py  test_injection.py  test_model_clients.py  test_provider_config.py  test_rag.py  test_submission_pack.py
data/: nist_questionnaire.csv
docs/: DEMO_NARRATIVE.md  DEPLOY.md
frontend/: next.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AdversarialReviewPanel.tsx  ApprovalControls.tsx  BandRoom.tsx  BandTimeline.tsx  Dashboard.tsx  DemoReset.tsx  EmptyWorkspace.tsx  ExportBar.tsx  Icon.tsx  LiveRoomPanel.tsx  Logo.tsx  NavShell.tsx  PipelineControl.tsx  PromiseLedger.tsx  (+4 more)
(+23 files in other folders)
